(ocamllex (modules lexer))
(menhir (modules tokens) (flags --only-tokens))
(menhir
 (merge_into parser)
 (modules tokens parser strict)
 (flags --external-tokens Tokens))
(menhir
 (merge_into with_parameters)
 (modules tokens parser with_parameters)
 (flags --external-tokens Tokens))
(library (name sqlcond))
